--- a/contacto.css
+++ b/contacto.css
@@ -1,12 +1,19 @@
 /* fuentes de la página web y css encabezados*/
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@font-face {
+    font-family: 'Bakso Sapi';
+    src: url(fonts/BaksoSapi.otf)
+    format('opentype');
+}
+
 h1, h2, h3 {
     font-family: 'Montserrat', sans-serif;
     font-weight:600;
 }
 
 h1 {
+    font-family: 'Bakso Sapi';
     text-align: center;
     font-size: 3em;
     color: beige;
